# protobuf

./: BUILD.bazel  MODULE.bazel  WORKSPACE
.bazelci/: presubmit.yml
.bcr/: presubmit.yml
.github/workflows/: sync.yml  test_bazel.yml  test_cpp.yml  test_upb.yml
bazel/private/: proto_info.bzl  proto_library_rule.bzl
bazel/tests/: java_proto_library_tests.bzl  proto_common_should_generate_tests.bzl
benchmarks/run_android_benchmarks/: BUILD  benchmarks.go  output.go  run_android_benchmarks.go
build_defs/: BUILD.bazel
ci/: Windows.bazelrc  common.bazelrc
conformance/: BUILD  binary_json_conformance_suite.cc  binary_wireformat.cc  binary_wireformat.h  binary_wireformat_test.cc  test_manager_test.cc
editions/golden/: editions_transform_proto2.proto  test_messages_proto2_editions.proto
examples/: BUILD.bazel  MODULE.bazel  WORKSPACE
examples_with_hyphen/: MODULE.bazel
hpb/: extension.h  hpb.h  ptr.h
hpb/bazel/: hpb_proto_library.bzl
hpb_generator/: context.h  gen_enums.cc  gen_extensions.cc  names.cc  protoc-gen-hpb.cc
java/core/: BUILD.bazel
lua/: test_upb.lua
objectivec/: GPBBootstrap.h  GPBDescriptor.m  GPBDescriptor_PackagePrivate.h  GPBMessage.m  GPBUtilities.m
objectivec/Tests/: unittest_mset.proto
pkg/: BUILD.bazel  build_systems.bzl  cc_dist_library.bzl
python/: convert.c  message.c
rust/: BUILD  codegen_traits.rs  cpp.rs  repeated.rs  upb.rs
rust/proto_proc_macro/: proto_proc_macro_impl.rs
rust/upb/: message.rs
toolchain/: toolchains.bazelrc
upb/: BUILD
upb/hash/: common.c  common.h
upb_generator/: BUILD  plugin.cc
(+152 files in other folders)
