"""Bazel module dependencies"""

module(
    name = "com_google_protobuf-examples-with-hyphen",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "protobuf", version = "0.0.0", repo_name = "com_google_protobuf")
local_path_override(
    module_name = "protobuf",
    path = "..",
)

# Fo language proto library rules before Bazel 8
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "4.0.0")
